[package]
edition = "2021"
name = "muskrat"
version = "0.1.0"
license = "MIT"

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = [ "defmt", "time-driver-any", "stm32g431rb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.5.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.4.0", path = "embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.2", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "embassy/embassy-futures" }
usbd-hid = "0.6.0"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }


[profile.release]
debug = 2
